[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/Enemy/BaseEnemy.gd" type="Script" id=2]

[node name="BaseEnemy" type="Area2D"]
collision_layer = 2
collision_mask = 37
script = ExtResource( 2 )

[node name="AnimSprite" type="AnimatedSprite" parent="."]

[node name="FirePos" type="Node2D" parent="."]

[node name="VisiNoti" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -2.38419e-07, 1.43051e-06 )
scale = Vector2( 1.6, 1.6 )

[connection signal="area_entered" from="." to="." method="_on_BaseEnemy_area_entered"]
[connection signal="screen_entered" from="VisiNoti" to="." method="_on_VisiNoti_screen_entered"]
[connection signal="screen_exited" from="VisiNoti" to="." method="_on_VisiNoti_screen_exited"]
